feat: localize 'No users found' message in mentions
- Add task.mention.noUsersFound translation key
- Replace hardcoded 'No users found' with $t() call
- Ready for translation to other languages

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -909,6 +909,9 @@
       "addedSuccess": "The comment was added successfully.",
       "permalink": "Copy permalink to this comment"
     },
+    "mention": {
+      "noUsersFound": "No users found"
+    },
     "deferDueDate": {
       "title": "Defer due date",
       "1day": "1 day",
