Fixed some more issues

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -862,6 +862,7 @@
       "relatedTasks": "Related Tasks",
       "reminders": "Reminders",
       "repeat": "Repeat",
+      "commentCount": "Number of comments",
       "startDate": "Start Date",
       "title": "Title",
       "updated": "Updated",
