--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -862,8 +862,7 @@
       "relatedTasks": "Related Tasks",
       "reminders": "Reminders",
       "repeat": "Repeat",
-      "commentSingular": "comment",
-      "commentPlural": "comments",
+      "comment": "{count} comment | {count} comments",
       "commentCount": "Number of comments",
       "startDate": "Start Date",
       "title": "Title",
