remove use of config file
nextcloud migrator settings 100% provided by user
no need for config file settings

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -566,6 +566,18 @@
       "serverUrl": "Nextcloud Server URL",
       "serverUrlPlaceholder": "https://cloud.example.com",
       "serverUrlDescription": "Enter the URL of your Nextcloud instance (cloud or self-hosted)",
+      "clientId": "OAuth Client ID",
+      "clientIdPlaceholder": "your-client-id",
+      "clientIdDescription": "Create an OAuth app in Nextcloud (Settings > Security > OAuth 2.0) and enter the Client ID here",
+      "clientSecret": "OAuth Client Secret",
+      "clientSecretPlaceholder": "your-client-secret",
+      "clientSecretDescription": "Enter the Client Secret from your Nextcloud OAuth app (shown only once when creating the app)",
+      "redirectUrl": "Redirect URL",
+      "redirectUrlPlaceholder": "https://vikunja.example.com/migrate/deck",
+      "redirectUrlDescription": "This must match the Redirect URI configured in your Nextcloud OAuth app. Use the current Vikunja URL with '/migrate/deck' appended.",
+      "userMappings": "User Mappings (Optional)",
+      "userMappingsPlaceholder": "nextcloud_user:vikunja_user\nalice:alice\nbob:robert",
+      "userMappingsDescription": "Map Nextcloud usernames to Vikunja usernames (one per line, format: nc_user:vikunja_user). Comments and attachments will be assigned to mapped users.",
       "invalidServerUrl": "Invalid server URL format. Please use http:// or https://",
       "serverUnreachable": "Server is unreachable. Please check the URL and your network connection.",
       "notNextcloudInstance": "Server is not a Nextcloud instance. Please verify the URL.",
@@ -577,7 +589,7 @@
       "accessTokenFailed": "Failed to obtain access token. Please restart the authorization process.",
       "accessTokenInvalid": "Access token is invalid or expired. Please re-authorize.",
       "accessTokenRevoked": "Access token was revoked. Please re-authorize.",
-      "oauthConfigError": "OAuth configuration error. Please contact your administrator.",
+      "oauthConfigError": "OAuth configuration error. Please check your Client ID and Client Secret.",
       "serverMismatch": "Server URL mismatch. Please restart the authorization process."
     }
   },
