--- a/frontend/src/i18n/lang/ja-JP.json
+++ b/frontend/src/i18n/lang/ja-JP.json
@@ -114,6 +114,11 @@
 					"dd/mm/yyyy": "DD/MM/YYYY",
 					"yyyy/mm/dd": "YYYY/MM/DD"
 				},
+				"timeFormat": "時刻の形式",
+				"timeFormatOptions": {
+					"12h": "12時間 (AM/PM)",
+					"24h": "24時間 (HH:mm)"
+				},
 				"externalUserNameChange": "名前はログインプロバイダー（{provider}）で管理されています。名前を変更する場合はそちらで行ってください。"
 			},
 			"sections": {
@@ -802,7 +807,9 @@
 			"overdue": "期限切れタスクを表示",
 			"fromuntil": "{from} 〜 {until} までのタスク",
 			"select": "期間の選択",
-			"noTasks": "タスクはありません — よい一日を！"
+			"noTasks": "タスクはありません — よい一日を！",
+			"filterByLabel": "ラベル {label} での絞り込み",
+			"clearLabelFilter": "ラベルでの絞り込みの解除"
 		},
 		"detail": {
 			"chooseDueDate": "期日を設定…",
@@ -862,6 +869,8 @@
 			"relatedTasks": "関連タスク",
 			"reminders": "リマインダー",
 			"repeat": "繰り返し間隔",
+			"comment": "{count} 件",
+			"commentCount": "コメント数",
 			"startDate": "開始日",
 			"title": "タスク名",
 			"updated": "更新日",
