feat: implement custom keyboard shortcuts infrastructure (Phase 1)
- Add TypeScript interfaces for custom shortcuts (ICustomShortcut.ts)
- Update user settings models to include customShortcuts field
- Enhance shortcuts.ts with metadata (actionId, customizable, category)
- Create useShortcutManager composable with full API
- Build ShortcutEditor component with key capture and validation
- Create KeyboardShortcuts settings page with category organization
- Add routing and navigation for keyboard shortcuts settings
- Add comprehensive translation keys for UI and error messages

This implements the foundational infrastructure for customizable keyboard shortcuts.
Navigation shortcuts (j/k, g+keys) remain fixed as specified.
Action shortcuts (task operations, general app) are now customizable.
Settings persist via existing frontendSettings system and sync across devices.

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -208,6 +208,18 @@
           "expiresAt": "Expires at",
           "permissions": "Permissions"
         }
+      },
+      "keyboardShortcuts": {
+        "title": "Keyboard Shortcuts",
+        "description": "Customize keyboard shortcuts for actions. Navigation shortcuts (j/k, g+keys) are fixed and cannot be changed.",
+        "resetAll": "Reset All to Defaults",
+        "resetAllConfirm": "Are you sure you want to reset all keyboard shortcuts to defaults?",
+        "resetCategory": "Reset Category",
+        "resetToDefault": "Reset to default",
+        "shortcutUpdated": "Shortcut updated successfully",
+        "shortcutReset": "Shortcut reset to default",
+        "categoryReset": "Category shortcuts reset to defaults",
+        "allReset": "All shortcuts reset to defaults"
       }
     },
     "deletion": {
@@ -1095,6 +1107,16 @@
     "toggleMenu": "Toggle The Menu",
     "quickSearch": "Open the search/quick action bar",
     "then": "then",
+    "fixed": "Fixed",
+    "pressKeys": "Press keys...",
+    "customizeShortcuts": "Customize shortcuts",
+    "helpText": "You can customize most keyboard shortcuts in settings.",
+    "errors": {
+      "unknownAction": "Unknown shortcut action",
+      "notCustomizable": "This shortcut cannot be customized",
+      "emptyShortcut": "Please press at least one key",
+      "conflict": "This shortcut is already assigned to: "
+    },
     "task": {
       "title": "Task Page",
       "done": "Mark task done / undone",
