feat: refactor existing shortcuts to use shortcut manager (Phase 2)
- Update v-shortcut directive to support both old format (keys) and new format (actionIds)
- Refactor general shortcuts: MenuButton (Ctrl+E), OpenQuickActions (Ctrl+K), ContentAuth (Shift+?)
- Refactor navigation shortcuts: all g+key sequences in Navigation.vue now use actionIds
- Refactor task detail shortcuts: all 14 task shortcuts + Ctrl+S now use shortcut manager
- Update help modal to show effective shortcuts and link to settings page
- Add showHelp shortcut action for Shift+? keyboard shortcut help

All existing shortcuts now use the shortcut manager system and will respect user customizations.
The help modal displays current effective shortcuts (default or customized) and provides
a direct link to the keyboard shortcuts settings page for easy customization.

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1106,6 +1106,7 @@
     "somePagesOnly": "These shortcuts work only on some pages.",
     "toggleMenu": "Toggle The Menu",
     "quickSearch": "Open the search/quick action bar",
+    "showHelp": "Show keyboard shortcuts help",
     "then": "then",
     "fixed": "Fixed",
     "pressKeys": "Press keys...",
