--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1112,6 +1112,7 @@
     "pressKeys": "Press keys...",
     "customizeShortcuts": "Customize shortcuts",
     "helpText": "You can customize most keyboard shortcuts in settings.",
+    "resetToDefault": "Reset to default",
     "errors": {
       "unknownAction": "Unknown shortcut action",
       "notCustomizable": "This shortcut cannot be customized",
