feat: add shortcut to quickly copy task identifier, title and url to clipboard (#2028)
This adds the following shortcuts:

- `.` to copy the task identifier
- `..` to copy the task identifier and title
- `...` to copy the task identifier, title, and url
- `Control + .` to copy the task url

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1117,7 +1117,11 @@
       "priority": "Change the priority of this task",
       "favorite": "Mark this task as favorite / unfavorite",
       "openProject": "Open the project of this task",
-      "save": "Save the current task"
+      "save": "Save the current task",
+      "copyIdentifier": "Copy task identifier to clipboard",
+      "copyIdentifierAndTitle": "Copy task identifier and title to clipboard",
+      "copyIdentifierTitleAndUrl": "Copy task identifier, title and URL to clipboard",
+      "copyUrl": "Copy task URL to clipboard"
     },
     "project": {
       "title": "Project Views",
