--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -1004,8 +1004,17 @@
       "everyDay": "Every Day",
       "everyWeek": "Every Week",
       "every30d": "Every 30 Days",
+      "everyMonth": "Every Month",
+      "everyQuarter": "Every Quarter",
+      "everySixMonths": "Every 6 Months",
+      "everyYear": "Every Year",
+      "every": "Every {amount} {type}",
       "mode": "Repeat mode",
+      "onDay": "On day",
+      "sameDay": "Same as due date",
       "monthly": "Monthly",
+      "monthlyOnDay": "Monthly on day {day}",
+      "yearly": "Yearly",
       "fromCurrentDate": "From completion date",
       "each": "Each",
       "specifyAmount": "Specify an amount…",
