feat: add discard confirmation modal and beforeunload warnings for unsaved changes
This commit improves the user experience when editing task descriptions and titles by preventing accidental data loss.

Changes:
- Add confirmation modal when discarding unsaved description changes
- Add Enter key shortcut to confirm modal actions
- Add browser beforeunload warning for unsaved changes
- Add translation strings for discard confirmation modal

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -695,6 +695,10 @@
       "undo": "Undo",
       "redo": "Redo",
       "placeholder": "Type some text or hit '/' to see more options…",
+      "discardChanges": {
+        "title": "Discard changes?",
+        "text": "You have unsaved changes. Do you really want to discard them?"
+      },
       "table": {
         "title": "Table",
         "insert": "Insert table",
