feat: add optional project column to table view

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -875,6 +875,7 @@
       "labels": "Labels",
       "percentDone": "Progress",
       "priority": "Priority",
+      "project": "Project",
       "relatedTasks": "Related Tasks",
       "reminders": "Reminders",
       "repeat": "Repeat",
