feat(comments): add sort order toggle for task comments
Allow users to switch between oldest-first and newest-first comment
ordering via a toggle button in the comments heading. The preference is
persisted as a frontend setting (commentSortOrder) and passed to the API
as the order_by query parameter so pagination works correctly.

When all comments fit on a single page, toggling reverses them
client-side to avoid an extra API call. New comments are inserted at the
correct position based on the active sort order, and in newest-first
mode the view scrolls to the top after adding a comment.

Link-share users fall back to a local (non-persisted) sort order since
they cannot save user settings.

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -928,7 +928,9 @@
       "deleteText1": "Are you sure you want to delete this comment?",
       "deleteSuccess": "The comment was deleted successfully.",
       "addedSuccess": "The comment was added successfully.",
-      "permalink": "Copy permalink to this comment"
+      "permalink": "Copy permalink to this comment",
+      "sortNewestFirst": "Newest first",
+      "sortOldestFirst": "Oldest first"
     },
     "mention": {
       "noUsersFound": "No users found"
