--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -477,7 +477,9 @@
       "deleteText": "Are you sure you want to remove this view? It will no longer be possible to use it to view tasks in this project. This action won't delete any tasks. This cannot be undone!",
       "deleteSuccess": "The view was deleted successfully.",
       "onlyAdminsCanEdit": "Only project admins can edit views.",
-      "updateSuccess": "The view was updated successfully."
+      "updateSuccess": "The view was updated successfully.",
+      "includeSubprojects": "Include subprojects",
+      "includeSubprojectsHint": "Show tasks from all subprojects of this project."
     }
   },
   "filters": {
