feat: add task duplicate with target project selection
destination project.
(labels, assignees, attachments, comments, due dates) into a selected
Implements #2241 - adds the ability to duplicate a task with all metadata
(labels, assignees, attachments, comments, due dates) into a selected

Backen:
- TaskDuplicate model with full metadata copy
- New PUT /tasks/:task/duplicate endpoint

Frontend:
- DuplicateTaskModal with project search
- Duplicate button in task detail sidebar
- Right-click context menu support
- Three-dot menu on kanban cards with Duplicate option
- i18n keys for English

--- a/frontend/src/i18n/lang/en.json
+++ b/frontend/src/i18n/lang/en.json
@@ -801,6 +801,16 @@
     "task": "Task",
     "new": "Create a task",
     "delete": "Delete this task",
+    "duplicate": {
+      "title": "Duplicate Task",
+      "action": "Duplicate",
+      "text": "Select a destination project for the copy of \"{task}\":",
+      "selectProject": "Destination project",
+      "selectProjectRequired": "Please select a destination project.",
+      "metadataHint": "All task metadata (description, labels, assignees, attachments, comments, and due dates) will be included in the copy.",
+      "success": "The task was successfully duplicated.",
+      "error": "An error occurred while duplicating the task."
+    },
     "createSuccess": "The task was successfully created.",
     "addReminder": "Add a reminder…",
     "doneSuccess": "The task was successfully marked as done.",
@@ -859,6 +869,7 @@
         "attachments": "Add Attachments",
         "relatedTasks": "Add Relation",
         "moveProject": "Move",
+        "duplicate": "Duplicate",
         "color": "Set Color",
         "delete": "Delete",
         "favorite": "Add to Favorites",
