Updated Urkraine language

--- a/pkg/i18n/lang/uk-UA.json
+++ b/pkg/i18n/lang/uk-UA.json
@@ -1,1 +1,162 @@
-{}
+{
+    "notifications": {
+        "greeting": "Привіт %[1]s,",
+        "email_confirm": {
+            "subject": "%[1]s, будь ласка, підтвердьте свою електронну адресу у Vikunja",
+            "subject_new": "%[1]s + Vikunja = <3",
+            "welcome":  "Ласкаво просимо до Vikunja!",
+            "confirm": "Щоб підтвердити свою електронну адресу, перейдіть за посиланням нижче:"
+        },
+        "password": {
+            "changed": {
+                "subject": "Ваш пароль у Vikunja було змінено",
+                "success": "Пароль вашого облікового запису було успішно змінено.",
+                "warning": "Якщо це були не ви, це може означати, що хтось зламав ваш обліковий запис. У цьому випадку зверніться до адміністратора вашого сервера."
+            },
+            "reset": {
+                "subject": "Скиньте свій пароль у Vikunja",
+                "instructions": "Щоб скинути пароль, перейдіть за посиланням нижче:",
+                "valid_duration": "Це посилання буде дійсним протягом 24 годин."
+            }
+        },
+        "totp": {
+            "invalid": {
+                "subject": "Хтось щойно намагався увійти у ваш обліковий запис Vikunja, але не вдалося",
+                "message": "Хтось щойно намагався увійти у ваш обліковий запис із правильним ім'ям користувача та паролем, але з неправильним паролем TOTP.",
+                "warning": "**Якщо це були не ви, хтось інший знає ваш пароль. Ви повинні негайно встановити новий!**"
+            },
+            "account_locked": {
+                "subject": "Ми вимкнули ваш обліковий запис у Vikunja",
+                "message": "Хтось намагався увійти з вашими обліковими даними, але не зміг надати дійсний пароль TOTP.",
+                "disabled": "Після 10 невдалих спроб ми вимкнули ваш обліковий запис і скинули ваш пароль. Щоб встановити новий, дотримуйтесь інструкцій у листі для скидання, який ми щойно вам надіслали.",
+                "reset_instructions": "Якщо ви не отримали електронного листа з інструкціями щодо скидання, ви завжди можете надіслати запит на новий за адресою [%[1]s](%[2]s)."
+            }
+        },
+        "login": {
+            "failed": {
+                "subject": "Хтось щойно намагався увійти у ваш обліковий запис Vikunja, але не зміг надати правильний пароль",
+                "message": "Хтось щойно намагався увійти у ваш обліковий запис із неправильним паролем тричі поспіль.",
+                "warning": "Якщо це були не ви, це може бути хтось інший, хто намагається зламати ваш обліковий запис.",
+                "enhance_security": "Щоб підвищити безпеку вашого облікового запису, ви можете встановити надійніший пароль або ввімкнути автентифікацію TOTP у налаштуваннях:"
+            }
+        },
+        "account": {
+            "deletion": {
+                "confirm": {
+                    "subject": "Будь ласка, підтвердьте видалення вашого облікового запису Vikunja",
+                    "request": "Ви надіслали запит на видалення свого облікового запису. Щоб підтвердити це, перейдіть за посиланням нижче:",
+                    "valid_duration": "Це посилання буде дійсним протягом 24 годин.",
+                    "schedule_info": "Щойно ви підтвердите видалення, ми заплануємо видалення вашого облікового запису через три дні та надішлемо вам ще один електронний лист до того часу.",
+                    "consequences": "Якщо ви продовжите видалення свого облікового запису, ми видалимо всі ваші проекти та завдання, які ви створили. Усе, чим ви поділилися з іншим користувачем або командою, передасть їм право власності.",
+                    "changed_mind": "Якщо ви не надсилали запит на видалення або передумали, ви можете просто проігнорувати цей електронний лист."
+                },
+                "scheduled": {
+                    "subject_days": "Ваш обліковий запис Vikunja буде видалено через %[1]s днів",
+                    "subject_tomorrow": "Ваш обліковий запис Vikunja буде видалено завтра",
+                    "request_reminder": "Ви нещодавно надіслали запит на видалення свого облікового запису Vikunja.",
+                    "deletion_time_days": "Ми видалимо ваш обліковий запис через %[1]s днів.",
+                    "deletion_time_tomorrow": "Ми видалимо ваш обліковий запис завтра.",
+                    "changed_mind": "Якщо ви передумали, просто перейдіть за посиланням нижче, щоб скасувати видалення, і дотримуйтесь інструкцій:"
+                },
+                "completed": {
+                    "subject": "Ваш обліковий запис Vikunja видалено",
+                    "confirmation": "Відповідно до вашого запиту ми видалили ваш обліковий запис Vikunja.",
+                    "permanent": "Це видалення є остаточним. Якщо ви не створили резервну копію і вам потрібні ваші дані зараз, зверніться до свого адміністратора."
+                }
+            }
+        },
+        "task": {
+            "reminder": {
+                "subject": "Нагадування про \"%[1]s\" (%[2]s)",
+                "message": "Нагадуємо про це завдання \"%[1]s\" (%[2]s)."
+            },
+            "comment": {
+                "subject": "Re: %[1]s",
+                "mentioned_subject": "%[1]s згадав вас у коментарі в \"%[2]s\"",
+                "mentioned_message": "Користувач **%[1]s** згадав вас у коментарі:"
+            },
+            "assigned": {
+                "subject_to_assignee": "Вас призначено на \"%[1]s\" (%[2]s)",
+                "message_to_assignee": "Користувач %[1]s призначив вас на \"%[2]s\".",
+                "subject_to_others": "Завдання \"%[1]s\" (%[2]s) було призначено %[3]s",
+                "message_to_others": "Користувач %[1]s призначив це завдання %[2]s.",
+                "subject_to_others_self": "Завдання \"%[1]s\" (%[2]s) було призначено %[3]s собі",
+                "message_to_others_self": "Користувач %[1]s призначив це завдання собі."
+            },
+            "deleted": {
+                "subject": "Завдання \"%[1]s\" (%[2]s) було видалено",
+                "message": "Користувач %[1]s видалив завдання \"%[2]s\" (%[3]s)"
+            },
+            "mentioned": {
+                "subject_new": "%[1]s згадав вас у новому завданні \"%[2]s\"",
+                "subject": "%[1]s згадав вас у завданні \"%[2]s\"",
+                "message": "Користувач **%[1]s** згадав вас у завданні:"
+            },
+            "overdue": {
+                "subject": "Завдання \"%[1]s\" (%[2]s) прострочено",
+                "message": "Нагадуємо про це завдання \"%[1]s\" (%[2]s), яке прострочено %[3]s і ще не виконано.",
+                "multiple_subject": "Ваші прострочені завдання",
+                "multiple_message": "У вас є такі прострочені завдання:",
+                "overdue_since": "з %[1]s",
+                "overdue_now": "зараз",
+                "overdue": "прострочено %[1]s"
+            }
+        },
+        "project": {
+            "created": "Користувач %[1]s створив проект \"%[2]s\""
+        },
+        "team": {
+            "member_added": {
+                "subject": "Користувач %[1]s додав вас до команди \"%[2]s\" у Vikunja",
+                "message": "Користувач %[1]s щойно додав вас до команди %[2]s у Vikunja."
+            }
+        },
+        "data_export": {
+            "ready": {
+                "subject": "Ваш експорт даних Vikunja готовий",
+                "message": "Ваш експорт даних Vikunja готовий до завантаження. Натисніть кнопку нижче, щоб завантажити його:",
+                "availability": "Завантаження буде доступне протягом наступних 7 днів."
+            }
+        },
+        "migration": {
+            "done": {
+                "subject": "Міграцію з %[1]s до Vikunja завершено",
+                "imported": "З %[1]s у Vikunja були імпортовані всі списки/проекти, завдання, нотатки, нагадування та файли, до яких ви маєте доступ.",
+                "have_fun": "Розважайтеся з вашими новими (старими) проектами!"
+            },
+            "failed": {
+                "subject": "Міграція з %[1]s до Vikunja не вдалася",
+                "message": "Схоже, цього разу перехід з %[1]s пройшов не так, як планувалося.",
+                "retry": "Але не хвилюйтеся! Просто спробуйте ще раз, почавши так само, як і раніше. Іноді ці збої трапляються через збої на стороні %[1]s, але повторна спроба часто допомагає.",
+                "error": "Під час міграції ми зіткнулися з невеликою помилкою: `%[2]s`.",
+                "report": "Будь ласка, напишіть нам про це [на форумі](https://community.vikunja.io/) або за іншими каналами, щоб ми могли розібратися, чому так сталося.",
+                "working_on_it": "Ми отримали повідомлення про помилку і працюємо над тим, щоб незабаром її усунути."
+            }
+        },
+        "common": {
+            "have_nice_day": "Гарного дня!",
+            "copy_url": "Якщо кнопка вище не працює, скопіюйте URL-адресу нижче та вставте її в адресний рядок вашого браузера:",
+            "actions": {
+                "open_task": "Відкрити завдання",
+                "open_vikunja": "Відкрити Vikunja",
+                "open_project": "Відкрити проект",
+                "open_team": "Відкрити команду",
+                "download": "Завантажити",
+                "reset_password": "Скинути пароль",
+                "go_to_settings": "Перейти до налаштувань",
+                "confirm_email": "Підтвердьте свою електронну адресу",
+                "abort_deletion": "Скасувати видалення",
+                "confirm_account_deletion": "Підтвердити видалення мого облікового запису",
+                "change_notification_settings_link": "Ви можете змінити налаштування сповіщень [тут](%[1]s)."
+            }
+        }
+    },
+    "time": {
+        "since_years": "один рік|%[1]d роки|%[1]d років",
+        "since_weeks": "один тиждень|%[1]d тижні|%[1]d тижнів",
+        "since_days": "один день|%[1]d дні|%[1]d днів",
+        "since_hours": "одна година|%[1]d години|%[1]d годин",
+        "since_minutes": "одна хвилина|%[1]d хвилини|%[1]d хвилин",
+        "list_last_separator": "і"
+    }
+}
